# tma-label-manager

./: .gitignore  README.md  TMA_MLEARN.ipynb
datasets/: generalized_dataset.csv  input_dataset_11758_sessions.csv
docker/: docker-compose.yml
label-manager/: .gitignore  Dockerfile  Pipfile  README.md  docker-entrypoint.sh  requirements.txt
label-manager/config/: .env.example  settings.py
label-manager/tstat-3.1.1/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  NEWS.in  README  README.in  TODO  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
label-manager/tstat-3.1.1/doc/: README  README.RRDtool  android.txt  dup_ooo_descr.txt  globals_conf_descr.txt  libtstat.txt  log_chat_complete_descr.txt  log_chat_messages_descr.txt  log_http_complete_descr.txt  log_mm_complete_descr.txt  log_skype_complete_descr.txt  log_streaming_complete_descr.txt  log_tcp_complete_descr.txt  log_udp_complete_descr.txt  log_video_complete_descr.txt  runtime_conf_descr.txt
label-manager/tstat-3.1.1/doc/HOWTO/: HOWTO.ansi  HOWTO.html  HOWTO.man  HOWTO.pod  HOWTO.ps  HOWTO.tex  HOWTO.txt  Makefile  tstat_banner.eps  tstat_output.eps
label-manager/tstat-3.1.1/include/: libtstat.h
label-manager/tstat-3.1.1/libtstat/: Makefile  Makefile.am  Makefile.in  libtstat.pc  libtstat.pc.in
label-manager/tstat-3.1.1/libtstat-demo/: Makefile  Makefile.am  Makefile.in  configure.ac  demo.c  pcapwrapper.c  pcapwrapper.h  tstat.conf
label-manager/tstat-3.1.1/tstat/: DPMI.c  Makefile  Makefile.am  Makefile.conf  Makefile.in  Makefile.sources  addresses.c  compress.c  compress.h  crypto.c  crypto.h  dag.c  dagtools.h  dns_cache.c  dns_cache.h  dns_namefilter.c  dns_namefilter.h  dump.c  dump.h  erf.c  erf_live.c  etherpeek.c  file_formats.h  freelists.c  freelists.h  globals.c  globals.h  histo.c  histo.h  http.c  http.h  inireader.c  inireader.h  ipp2p_tstat.c  ipp2p_tstat.h  ipv6.c  ipv6.h  jabber.c  jabber.h  l7types.h  (+55 more)
label-manager/tstat-3.1.1/tstat-conf/: DNS_config.txt  avgipg.conf  ether.internal  globals.conf  histo.conf  net.all  net.private  pktsize.conf  rrd.conf  runtime.conf  tstat.conf
label-manager/tstat-3.1.1/tstat/.deps/: DNSCache.Po  DNSCache_ipv6.Po  DNSEntry.Po  DNSEntry_ipv6.Po  DPMI.Po  addresses.Po  compress.Po  crypto.Po  dag.Po  dns_cache.Po  dns_namefilter.Po  dump.Po  erf.Po  erf_live.Po  etherpeek.Po  freelists.Po  globals.Po  histo.Po  http.Po  inireader.Po  ipp2p_tstat.Po  ipv6.Po  jabber.Po  mfiles.Po  misc.Po  msn.Po  naivebayes.Po  names.Po  netm.Po  netscout.Po  nlanr.Po  ns.Po  options.Po  output.Po  p2p.Po  panon.Po  plugin.Po  print.Po  rexmit.Po  rijndael.Po  (+15 more)
label-manager/tstat-3.1.1/tstat/dnscache/: DNSCache.cpp  DNSCache.h  DNSCache_ipv6.cpp  DNSCache_ipv6.h  DNSEntry.cpp  DNSEntry.h  DNSEntry_ipv6.cpp  DNSEntry_ipv6.h
label-manager/web/: admin.py  forms.py  models.py  network.py  urls.py  views.py
label-manager/web/static/web/css/: app.css
label-manager/web/templates/web/: download.html  index.html
label-manager/web/templates/web/layouts/: app.html
quality-predictor/: Dockerfile  Pipfile
quality-predictor/config/: settings.py  urls.py
quality-predictor/web/: models.py  urls.py  views.py
quality-predictor/web/static/web/css/: app.css
quality-predictor/web/templates/web/: index.html
quality-predictor/web/templates/web/layouts/: app.html
scripts/: backup.sh  mirror.sh
scripts/bw_limit/: bw_handler.sh
